# tamr-cloud-sdk-python

./: pyproject.toml
.github/: .releaserc.yaml
examples/: list_jobs.py
tamr_cloud_sdk/tamr_sdk/: api_client.py
tamr_cloud_sdk/tamr_sdk/jobs/: jobs_client.py
